hphp/hack/test/typecheck/disallow_goto/goto.php
<?hh

function test(): void {
  goto L0;
  L0:
}
